--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -8,6 +8,7 @@
   --global-text-color: #{$black-color};
   --global-text-color-light: #{$grey-color};
   --global-theme-color: #{$pink-color};
+  --global-theme-color-light: #{$pink-color};
   --global-hover-color: #{$pink-color};
   --global-footer-bg-color: #{$grey-color-dark};
   --global-footer-text-color: #{$grey-color-light};
@@ -15,6 +16,7 @@
   --global-distill-app-color: #{$grey-color};
   --global-divider-color: rgba(0,0,0,.1);
   --global-card-bg-color: #{$white-color};
+  --global-card-text-color: #{$grey-color-dark};
 
   .fa-sun {
     display : none;
@@ -34,7 +36,7 @@ html[data-theme='dark'] {
   --global-theme-color: #{$cyan-color};
   --global-hover-color: #{$cyan-color};
   --global-footer-bg-color: #{$grey-color-light};
-  --global-footer-text-color: #{$grey-color-dark};
+  --global-footer-text-color: #{$white-color};
   --global-footer-link-color: #{$black-color};
   --global-distill-app-color: #{$grey-color-light};
   --global-divider-color: #424246;
