--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
 
           <div class="collapse navbar-collapse text-right" id="navbarNav">
             <ul class="navbar-nav ml-auto flex-nowrap">
-
+              <link rel="stylesheet" href="../assets/css/dna.css">
               {%- for page in site.pages -%}
                 {% if page.permalink == '/' %}
                   {% assign about_title = page.title %}
