--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -8,7 +8,7 @@
   --global-text-color: #{$black-color};
   --global-text-color-light: #{$grey-color};
   --global-theme-color: #{$pink-color};
-  --global-theme-color-light: #{$pink-color};
+  --global-theme-color-light: #{$pink-color-light};
   --global-hover-color: #{$pink-color};
   --global-footer-bg-color: #{$grey-color-dark};
   --global-footer-text-color: #{$grey-color-light};
@@ -34,6 +34,7 @@ html[data-theme='dark'] {
   --global-text-color: #{$grey-color-light};
   --global-text-color-light: #{$grey-color-light};
   --global-theme-color: #{$cyan-color};
+  --global-theme-color-light: #{$light-cyan-color};
   --global-hover-color: #{$cyan-color};
   --global-footer-bg-color: #{$grey-color-light};
   --global-footer-text-color: #{$white-color};
