--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -11,8 +11,8 @@ layout: default
           <p class="desc">{{ page.subtitle }}</p>
         </header>
         <article>
-          {% if page.profile -%}
-          <div class="profile float-right">
+          <!-- {% if page.profile -%}
+          <div class="profile float-left" style="border: 1px solid black;">
             {%- if page.profile.image %}
               {%- assign profile_image_path = page.profile.image | prepend: 'assets/img/' -%}
               {% include figure.html 
@@ -25,45 +25,53 @@ layout: default
               {{ page.profile.address }}
             </div>
             {%- endif %}
-          </div>
-            <div class="loader float-right" >
-              <div class="dot dot1"><i></i></div>
-              <div class="dot dot2"><i></i></div>
-              <div class="dot dot3"><i></i></div>
-              <div class="dot dot4"><i></i></div>
-              <div class="dot dot5"><i></i></div>
-              <div class="dot dot6"><i></i></div>
-              <div class="dot dot7"><i></i></div>
-              <div class="dot dot8"><i></i></div>
-              <div class="dot dot9"><i></i></div>
-              <div class="dot dot10"><i></i></div>
-              <div class="dot dot11"><i></i></div>
-              <div class="dot dot12"><i></i></div>
-              <div class="dot dot13"><i></i></div>
-              <div class="dot dot14"><i></i></div>
-              <div class="dot dot15"><i></i></div>
-              <div class="dot dot16"><i></i></div>
-              <div class="dot dot17"><i></i></div>
-              <div class="dot dot18"><i></i></div>
-              <div class="dot dot19"><i></i></div>
-              <div class="dot dot20"><i></i></div>
-              <div class="dot dot22"><i></i></div>
-              <div class="dot dot23"><i></i></div>
-              <div class="dot dot24"><i></i></div>
-              <div class="dot dot25"><i></i></div>
-              <div class="dot dot26"><i></i></div>
-              <div class="dot dot27"><i></i></div>
-              <div class="dot dot28"><i></i></div>
-              <div class="dot dot29"><i></i></div>
-              <div class="dot dot30"><i></i></div>
-              <div class="dot dot21"><i></i></div>
+          </div> -->
+          <div class="profile float-right" style="height:50vh; width:20vw;">
+              <div class="computer-container">
+                <div class="computer-monitor">
+                  <div class="loader" style="z-index: 4; padding-top:15vh; padding-left:2vw;">
+                    <div class="dot dot1"><i></i></div>
+                    <div class="dot dot2"><i></i></div>
+                    <div class="dot dot3"><i></i></div>
+                    <div class="dot dot4"><i></i></div>
+                    <div class="dot dot5"><i></i></div>
+                    <div class="dot dot6"><i></i></div>
+                    <div class="dot dot7"><i></i></div>
+                    <div class="dot dot8"><i></i></div>
+                    <div class="dot dot9"><i></i></div>
+                    <div class="dot dot10"><i></i></div>
+                    <div class="dot dot11"><i></i></div>
+                    <div class="dot dot12"><i></i></div>
+                    <div class="dot dot13"><i></i></div>
+                    <div class="dot dot14"><i></i></div>
+                    <div class="dot dot15"><i></i></div>
+                    <div class="dot dot16"><i></i></div>
+                    <div class="dot dot17"><i></i></div>
+                    <div class="dot dot18"><i></i></div>
+                    <div class="dot dot19"><i></i></div>
+                    <div class="dot dot20"><i></i></div>
+                    <div class="dot dot22"><i></i></div>
+                    <div class="dot dot23"><i></i></div>
+                    <div class="dot dot24"><i></i></div>
+                    <div class="dot dot25"><i></i></div>
+                    <div class="dot dot26"><i></i></div>
+                    <div class="dot dot27"><i></i></div>
+                    <div class="dot dot28"><i></i></div>
+                    <div class="dot dot29"><i></i></div>
+                    <div class="dot dot30"><i></i></div>
+                    <div class="dot dot21"><i></i></div>
+                  </div>
+                </div>
+                <div class="computer-bottom"></div>
+                <div class="computer-stand"></div>
+                <div class="computer-stand-bottom"></div>
+              </div>
             </div>
-
-          {%- endif %}
-
-          <div class="clearfix">
+          </div>
+          <div class="clearfix" style=" width: 30vw; padding-top:2vh;">
             {{ content }}
           </div>
+          {%- endif %}
 
           {% if page.news -%}
           <!-- News -->
