--- a/_layouts/terminal.html
+++ b/_layouts/terminal.html
@@ -9,7 +9,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
-  <title>{{site.title }}</title>
+  <title>Mihir Bafna (Terminal) </title>
+  <link rel="icon" type="image/x-icon" href="../assets/img/dna.png">
   <link rel="stylesheet" href="../assets/css/terminal.css" />
     <link rel="stylesheet" href="../assets/css/terminal-extra.css">
     <link rel="stylesheet" href="../_sass/_themes.scss">
@@ -17,6 +18,8 @@
 
     <script src="https://kit.fontawesome.com/3f2db6afb6.js" crossorigin="anonymous"></script>
     <script src="../assets/js/terminal.js"></script>
+    <script src="../assets/js/theme.js"></script>
+    <script src="../assets/js/dark-mode.js"></script>
     <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script>
 </head>
 <body>
@@ -47,3 +50,4 @@
     </div>
   </div>
 </body>
+
