--- a/_layouts/terminal.html
+++ b/_layouts/terminal.html
@@ -23,6 +23,7 @@
     <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script>
 </head>
 <body>
+  {%- include header.html %}
 
   <div class="terminal_window" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
     </div>
@@ -49,5 +50,7 @@
       </div>
     </div>
   </div>
+  {%- include footer.html %}
+
 </body>
 
