--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -28,6 +28,12 @@
     padding-top: 12px;
     display : block;
   }
+  .repo-img-light {
+    display: block;
+  }
+  .repo-img-dark {
+    display: none;
+  }
 }
 
 html[data-theme='dark'] {
@@ -54,5 +60,11 @@ html[data-theme='dark'] {
   }
   .fa-moon {
     display : none;
+  }
+  .repo-img-light {
+    display: none;
+  }
+  .repo-img-dark {
+    display: block;
   }
 }
