--- a/_includes/header.html
+++ b/_includes/header.html
@@ -83,11 +83,11 @@
               {%- endif -%}
               {%- endif -%}
               {% endfor -%}
-              <li class="nav-item {% if page.permalink == '/terminal/' %}active{% endif %}">
+              <!-- <li class="nav-item {% if page.permalink == '/terminal/' %}active{% endif %}">
                 <a class="nav-link" href="/terminal">
                     <i class="fas fa-desktop"></i>
                 </a>
-              </li>
+              </li> -->
               {%- if site.enable_darkmode %}
 
               <!-- Toogle theme mode -->
