--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -6,10 +6,14 @@ layout: default
 
           <header class="post-header">
             <h1 class="post-title">curriculum vitae {% if page.cv_pdf %}<a href="{{ page.cv_pdf | prepend: 'assets/pdf/' | relative_url}}" target="_blank" rel="noopener noreferrer" class="float-right"><i class="fas fa-file-pdf"></i></a>{% endif %}</h1>
-            <p class="post-description">{{ page.description }}</p>
+            <!-- <p class="post-description">{{ page.description }}</p> -->
           </header>
-
-          <article>
+          <body>
+            <hr/>
+            <object data="{{ page.cv_pdf | prepend: 'assets/pdf/' | relative_url}}" type="application/pdf" width="100%" height="500px">
+            </object>
+          </body>
+          <!-- <article>
             <div class="cv">
               {% for entry in site.data.cv %}
                 <div class="card mt-3 p-3">
@@ -30,6 +34,6 @@ layout: default
                 </div>
               {% endfor %}
               </div>
-          </article>
+          </article> -->
 
         </div>
