--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -17,7 +17,7 @@
   --global-divider-color: rgba(0,0,0,.1);
   --global-card-bg-color: #{$white-color};
   --global-card-text-color: #{$grey-color-dark};
-  --global-computer-inner-color: #{$white-color};
+  --global-computer-inner-color: #fafafa;
   --global-computer-outer-color: #{$grey-color};
 
   .fa-sun {
