fixed about section

--- a/_layouts/terminal.html
+++ b/_layouts/terminal.html
@@ -23,7 +23,7 @@
     <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script>
 </head>
 <body>
-  {%- include header.html %}
+  <!-- {%- include header.html %} -->
 
   <div class="terminal_window" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
     </div>
