--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -28,7 +28,7 @@ layout: default
             </div>
             {%- endif %}
           </div> -->
-          <div class="profile float-right" style="height:50vh; width:20vw;">
+          <div class="profile float-right" style="padding-left:50px; width:45%; height:100%;">
               <div class="computer-container">
                 <div class="computer-monitor" onclick="window.open('/terminal/', '_self')">
                   <!-- <div class="loader" style="z-index: 4; padding-top:15vh; padding-left:2vw;"> -->
@@ -73,11 +73,9 @@ layout: default
               </div>
             </div>
           </div>
-          <div class="clearfix" style=" width: 30vw; padding-top:2vh;">
+          <div class="clearfix" style=" width: 55%; padding-top:2vh;">
             {{ content }}
-          </div>
-          {%- endif %}
-          {%- if page.social %}
+            {%- if page.social %}
           <!-- Social -->
           <h2>   </h2>
           <div class="social">
@@ -91,6 +89,9 @@ layout: default
             
           </div>
           {%- endif %}
+          </div>
+          {%- endif %}
+          
           {% if page.news -%}
           <!-- News -->
           {%- include news.html %}
