--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -10,8 +10,11 @@ layout: default
           </header>
           <body>
             <hr/>
-            <object data="{{ page.cv_pdf | prepend: 'assets/pdf/' | relative_url}}" type="application/pdf" width="100%" height="500px">
-            </object>
+            <div style="height:90vh">
+              <object data="{{ page.cv_pdf | prepend: 'assets/pdf/' | relative_url}}" type="application/pdf" width="100%" height="100%">
+              </object>
+            </div>
+
           </body>
           <!-- <article>
             <div class="cv">
