--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -10,6 +10,9 @@
           <abbr class="badge">{{entry.abbr}}</abbr>
           {%- endif -%}
         {%- endif -%}
+        <!-- {%- if entry.shorttitle -%}
+          <div class="award">{{entry.shorttitle}}</div>
+        {%- endif -%} -->
         </div>
 
         <!-- Entry bib key -->
@@ -116,7 +119,7 @@
           {%- endif %}
           {%- if entry.pdf %}
             {% if entry.pdf contains '://' -%}
-            <a href="{{ entry.pdf }}" class="btn btn-sm z-depth-0" role="button">PDF</a>
+            <a href="{{ entry.pdf }}" class="btn btn-sm z-depth-0" role="button">Paper</a>
             {%- else -%}
             <a href="{{ entry.pdf | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">PDF</a>
             {%- endif %}
