--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -299,6 +299,10 @@ footer.sticky-bottom {
         color: var(--global-card-bg-color) !important;
         background-color: var(--global-theme-color) !important;
       }
+      .badge-secondary {
+        color: var(--global-text-color) !important;
+        background-color: var(--global-theme-color) !important;
+      }
     }
   }
 }
