--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -126,6 +126,10 @@ blockquote {
   }
 }
 
+.post-header{
+  padding-bottom:0%;
+
+}
 .post-description {
   margin-bottom: 2rem;
   font-size: 0.875rem;
@@ -500,15 +504,17 @@ footer.sticky-bottom {
       }
       .author {
         a {
-          border-bottom: 1px dashed var(--global-theme-color);
+          border-bottom: 1px dashed var(--global-text-color);
+          color: var(--global-text-color);
           &:hover {
               border-bottom-style: solid;
               text-decoration: none;
           }
         }
         > em {
-          border-bottom: 1px solid;
+          border-bottom: 1px solid var(--global-theme-color);
           font-style: normal;
+          color: var(--global-theme-color);
         }
       }
       .links {
