--- a/_includes/selected_papers.html
+++ b/_includes/selected_papers.html
@@ -1,6 +1,6 @@
 
           <div class="publications">
-            <h2>selected publications</h2>
+            <h2>selected papers</h2>
             <hr/>
             {% bibliography -f papers -q @*[selected=true]* %}
           </div>
